--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -19,9 +19,7 @@
           android:versionCode="1"
           android:versionName="1.0">
 
-    <uses-sdk
-            android:minSdkVersion="19"
-            android:targetSdkVersion="22"/>
+    <uses-sdk android:targetSdkVersion="22"/>
 
     <application
             android:allowBackup="true"
