--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   Copyright (C) 2015 The Android Open Source Project
 
   Licensed under the Apache License, Version 2.0 (the "License");
@@ -15,39 +14,40 @@
   limitations under the License.
   -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.example.castremotedisplay"
-          android:versionCode="1"
-          android:versionName="1.0">
+    package="com.example.castremotedisplay"
+    android:versionCode="1"
+    android:versionName="1.0">
 
-    <uses-sdk android:targetSdkVersion="22"/>
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+    <uses-sdk android:targetSdkVersion="22" />
 
     <application
-            android:allowBackup="true"
-            android:icon="@drawable/ic_launcher"
-            android:label="@string/app_name"
-            android:theme="@style/Theme.AppCompat.NoActionBar">
+        android:allowBackup="true"
+        android:icon="@drawable/ic_launcher"
+        android:label="@string/app_name"
+        android:theme="@style/Theme.AppCompat.NoActionBar">
         <activity
-                android:name=".MainActivity"
-                android:screenOrientation="portrait"
-                android:configChanges="orientation"
-                android:label="@string/app_name"
-                android:launchMode="singleTop">
+            android:name=".MainActivity"
+            android:configChanges="orientation"
+            android:label="@string/app_name"
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
+                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
-                android:name=".CastRemoteDisplayActivity"
-                android:screenOrientation="portrait"
-                android:configChanges="orientation"
-                android:launchMode="singleTop"
-                android:label="@string/app_name">
-        </activity>
+            android:name=".CastRemoteDisplayActivity"
+            android:configChanges="orientation"
+            android:label="@string/app_name"
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait" />
 
-        <service android:name="com.example.castremotedisplay.PresentationService"
-                 android:exported="false"/>
+        <service
+            android:name="com.example.castremotedisplay.PresentationService"
+            android:exported="false" />
 
     </application>
 
