--- a/build.gradle
+++ b/build.gradle
@@ -54,4 +54,5 @@ dependencies {
     implementation 'com.google.android.gms:play-services-cast:19.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.3'
     implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'com.google.android.exoplayer:exoplayer:2.11.7'
 }
